[package]
name = "flash_tmux"
version = "0.1.0"
edition = "2024"
description = "A tmux plugin inspired by folke/flash.nvim that enables you to search visible strings in the current tmux pane and copy it to system clipboard by pressing the associated label key."
readme = "README.md"
repository = "https://github.com/iovis/flash.tmux"
license = "MIT"
keywords = ["cli", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
unicode-width = "0.2.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
